--- a/tutorial-part-two/package.json
+++ b/tutorial-part-two/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "gatsby": "^1.9.207",
     "gatsby-link": "^1.6.37",
+    "gatsby-plugin-sass": "^1.0.17",
     "gatsby-plugin-typography": "^1.7.14",
     "typography-theme-bootstrap": "^0.16.7",
     "typography-theme-lawton": "^0.15.10"
