--- a/tutorial-part-three/package.json
+++ b/tutorial-part-three/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "gatsby": "^1.9.207",
-    "gatsby-link": "^1.6.37"
+    "gatsby-link": "^1.6.37",
+    "gatsby-plugin-typography": "^1.7.14",
+    "typography-theme-fairy-gates": "^0.15.11"
   }
 }
